# sevent

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.rst  TODO.txt  _address_8cc.html  _address_8cc_source.html  _address_8h.html  _address_8h_source.html  _asio_connector_8cc.html  _asio_connector_8cc_source.html  _asio_connector_8h.html  _asio_connector_8h_source.html  _asio_facade_8cc.html  _asio_facade_8cc_source.html  _asio_facade_8h.html  _asio_facade_8h_source.html  _asio_listener_8cc.html  _asio_listener_8cc_source.html  _asio_listener_8h.html  _asio_listener_8h_source.html  _asio_service_8cc.html  _asio_service_8cc_source.html  _asio_service_8h.html  _asio_service_8h_source.html  _asio_session_8cc.html  _asio_session_8cc_source.html  _asio_session_8h.html  _asio_session_8h_source.html  _boost_8h.html  _boost_8h_source.html  _boost_serialize_8h.html  _boost_serialize_8h_source.html  _buffer_8h.html  _buffer_8h_source.html  _chain_8h.html  _chain_8h_source.html  _connector_8h.html  _connector_8h_source.html  (+178 more)
examples/: BugExampleClient.cc  BugExampleServer.cc  CMakeLists.txt  Client.cc  EventExample.cc  FancyClient.cc  FancyServer.cc  HeavyLoadClient.cc  HeavyLoadServer.cc  Instrumentation.h  SerializablePerson.h  SerializeExample.cc  Server.cc  SimpleClient.cc  SimpleEventExample.cc  SimpleServer.cc  SocketExample.cc
examples/showcase/: BoostSerializedAddressBook.h  CMakeLists.txt  Client.cc  Server.cc  Shared.h  ToggleDebugClient.cc
examples/socket/: CMakeLists.txt  Example.cc  FacadeExample.cc  LowLevelAsioExample.cc
sevent/: BoostSerialize.h  CMakeLists.txt  EndianSafe.h  EventHandlerMap.cc  EventHandlerMap.h  StringSerializer.h  event.h  serialize.h  sevent.h  socket.h
sevent/asiosocket/: AsioConnector.h  AsioFacade.cc  AsioFacade.h  AsioListener.cc  AsioListener.h  AsioService.cc  AsioService.h  AsioSession.cc  AsioSession.h
sevent/datastruct/: MutableCharArray.h  SharedArray.h
sevent/event/: Buffer.h  CMakeLists.txt  Chain.h  Event.h  EventHandler.h  EventHandlerCollection.cc  EventHandlerCollection.h  EventId.h  EventIdBodySerialized.h  EventSessionMediator.cc  EventSessionMediator.h  EventSocketSessionMediator.cc  EventSocketSessionMediator.h  HandlerMap.cc  HandlerMap.h  NumericEventId.h  StringEventId.h
sevent/serialize/: Boost.h  CMakeLists.txt  EndianSafe.cc  EndianSafe.h  Pair.h  Result.h  Serializable.h  SerializePair.h  Serialized.cc  Serialized.h  SharedArray.cc  SharedArray.h  String.cc  String.h
sevent/socket/: Address.cc  Address.h  AsioConnector.cc  AsioConnector.h  AsioFacade.cc  AsioFacade.h  AsioListener.cc  AsioListener.h  AsioResolver.cc  AsioResolver.h  AsioService.cc  AsioService.h  AsioSession.cc  AsioSession.h  AsioSocketConnector.cc  AsioSocketConnector.h  AsioSocketFacade.cc  AsioSocketFacade.h  AsioSocketListener.cc  AsioSocketListener.h  AsioSocketService.cc  AsioSocketService.h  AsioSocketSession.cc  AsioSocketSession.h  Buffer.h  CMakeLists.txt  ConstBuffer.h  Event.h  EventData.cc  EventData.h  Facade.cc  Facade.h  Listener.h  LocalSession.cc  LocalSession.h  MutableBuffer.h  ReceiveEvent.cc  ReceiveEvent.h  SendEvent.cc  SendEvent.h  (+19 more)
src/: Address.h  AsioSocketConnector.cc  AsioSocketConnector.h  AsioSocketListener.cc  AsioSocketListener.h  AsioSocketService.cc  AsioSocketService.h  AsioSocketSession.cc  AsioSocketSession.h  Buffer.cc  Buffer.h  CMakeLists.txt  EventData.cc  EventData.h  EventHandler.h  EventHandlerCollection.cc  EventHandlerCollection.h  EventSocketSessionMediator.cc  EventSocketSessionMediator.h  LocalSession.cc  LocalSession.h  Session.cc  Session.h  SocketConnector.h  SocketListener.h  SocketService.h  SocketSession.cc  SocketSession.h  SocketSessionRegistry.cc  SocketSessionRegistry.h  WorkerThread.h
src/socket/: Address.h  AsioSocketListener.cc  AsioSocketListener.h  AsioSocketService.h  CMakeLists.txt  EventData.h  LocalSession.h  SocketSession.cc  SocketSession.h  WorkerThread.h
test/: AsciiToNum.cc  CMakeLists.txt  Example.cc  TestBoostSerialize.cc  TestEvent.cc  TestExample.cc
test/serialize/: CMakeLists.txt  TestBoostSerialize.cc  TestEndianSafe.cc  TestStringSerialize.cc
test/socket/: CMakeLists.txt  StressTestFacade.cc  TestCallbacks.cc  TestEvent.cc  TestFacade.cc  TestFacadeMultiClient.cc  TestSEventSocket.cc  TestSEventSocketFacade.cc  TestSeventSocket  TestSeventSocket.cc  helpers.h
