
add_boost_test(TestSocketFacade TestFacade.cc)
target_link_libraries(TestSocketFacade sevent_socket)

add_boost_test(TestSocketFacadeMultiClient TestFacadeMultiClient.cc)
target_link_libraries(TestSocketFacadeMultiClient sevent_socket)

add_boost_test(StressTestSocketFacade StressTestFacade.cc)
target_link_libraries(StressTestSocketFacade sevent_socket)
