#add_boost_test(TestSocketFacade TestFacade.cc)
#target_link_libraries(TestSocketFacade sevent)

#add_boost_test(TestSocketFacadeMultiClient TestFacadeMultiClient.cc)
#target_link_libraries(TestSocketFacadeMultiClient sevent)

#add_boost_test(StressTestSocketFacade StressTestFacade.cc)
#target_link_libraries(StressTestSocketFacade sevent)

#add_boost_test(TestCallbacks TestCallbacks.cc)
#target_link_libraries(TestCallbacks sevent)
